# holmes-oss

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml
src/: index.css  main.tsx  polyfills.ts  routes.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  keystore.rs  lib.rs
src-tauri/src/commands/: chat.rs  documents.rs  memory.rs  mod.rs  projects.rs  settings.rs  subfolders.rs  tabular.rs  workflows.rs
src-tauri/src/db/: builtin_workflows.json  mod.rs  tests.rs
src-tauri/src/documents/: extract.rs
src-tauri/src/memory/: context.rs  entity.rs  graph.rs  hnsw.rs  mod.rs  observations.rs  observer.rs  recall.rs  reflector.rs
src-tauri/src/providers/: gemini.rs  mod.rs  ollama.rs  retry.rs  traits.rs
src-tauri/src/search/: mod.rs
src-tauri/src/tools/: mod.rs
src/components/chat/: ChatView.tsx  PreResponseWrapper.tsx
src/components/shared/: AppLayout.tsx  AppSidebar.tsx  CitationViewerDrawer.tsx  CommandPalette.tsx  DocxView.tsx  InitialView.tsx  PdfView.tsx  Titlebar.tsx
src/components/tabular/: AddColumnModal.tsx  EditColumnMenu.tsx  (+1 more)
src/lib/: citations.tsx  columnPresets.ts  doc-resolver.ts  exportToExcel.ts  greetings.ts  quote-match.ts  tauri-chat-transport.ts  tauri.ts  useTheme.ts
src/pages/: AssistantPage.tsx  ChatsPage.tsx  OnboardingPage.tsx  ProjectPage.tsx  ProjectsPage.tsx  SettingsPage.tsx  TabularReviewPage.tsx  TabularReviewsPage.tsx  WorkflowEditorPage.tsx  WorkflowsPage.tsx
(+1 files in other folders)
