[package]
name = "holmes"
version = "0.1.0"
description = "The legal AI that remembers everything your firm has ever done"
authors = ["Holmes"]
license = "AGPL-3.0-or-later"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
tauri = { version = "2.11.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
log = "0.4"
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.34", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
hnsw_rs = "0.3"
pdf-extract = "0.7"
zip = "2.4"
quick-xml = "0.36"
keyring = "3"
dirs = "6"
